Fix error pages

--- a/public/422.html
+++ b/public/422.html
@@ -46,18 +46,6 @@ p.message a {
 h1 {
   font-size: 100%; color: #f00; line-height: 1.5em;
 }
-a.home-link {
- display: block;
- width: 374px;
- margin: 9px auto 0;
- height: 81px;
- float: left;
- clear: both;
- text-indent: -90000em;
- position: absolute;
- bottom: 54px;
- left: 20px;
-}
 .hide {
  display:none;
 }
@@ -76,8 +64,7 @@ a.home-link {
       </h2> 
       <p class="message">Maybe you tried to change something you didn't have access to.</p>
       <p class="message">How about going back to the <a href="/">homepage</a> and starting again?</p>
-      <p class="message">You could send us a <a href="mailto:info@neighbourscanhelp.org.uk?Subject=Page%20not%20found">message</a>.</p>
-      <a href="/" class="home-link">The Neighbours Can Help Team</a>
+      <p class="message">You could send us a <a href="mailto:info@neighbourscanhelp.org.uk?Subject=Change%20was%20rejected">message</a>.</p>
     </div>
   </div>
 </body>
